# dagster-vocabulary

./: .gitignore  README.md  pyproject.toml
dagster_vocabulary/: __init__.py
dagster_vocabulary/assets/: definitions.py  partitions.py  piece.py  pieces.py  words.py
dagster_vocabulary/defs/partitions/: references.py  words.py
dagster_vocabulary/url/: get.py  read.py
dagster_vocabulary/url/group/: get.py
